Fixed product image distortion on home page

--- a/main.css
+++ b/main.css
@@ -91,25 +91,38 @@ body {
     display: grid;
     justify-items: center;
     grid-template-columns: auto auto auto;
-    column-width: 260px;
+    column-width: 400px;
     column-count: auto;
     margin: 30px;
+}
+#product_square {
+    /* border: red solid 1pt; */
+    margin: auto;
+    float: center;
+    margin-bottom: 60px;
+    width: 400px;
 }
 .products {
     display: block;
     text-decoration: none;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     color: black;
 }
 .products p {
-    width: 260px;
+    width: 400px;
     text-align: center;
     margin-bottom: 8px;
     margin-top: 5px;
 }
 .products img {
-    width: 260px;
-    height: 250px;
+    /* Centers the image */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /* Size of the image */
+    max-width: 400px;
+    height: auto;
+    max-height: 300px;
 }
 .products:visited {
     color: black;
